# fractol_test

./: CMakeLists.txt
includes/: fractol.h
srcs/: background.c  close.c  color.c  init.c  main.c  math.c  render.c  utils.c
